<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Indovina Chi?</string>
    <string name="new_game_string">Nuova Partita</string>
    <string name="exit_string">Chiudi</string>
    <string name="title_string">Indovina Chi?</string>
    <string name="instruction_string">Istruzioni</string>
    <string name="story_string">Storia dei personaggi</string>
    <string name="choice_face_string">Avvia scelta random</string>
    <string name="start_string">Start!</string>
    <string name="character_name_string">Il nome del personaggio è:</string>
    <string name="istruction">Scoprire chi é il personaggio raffigurato sulla carta gialla del vostro avversario prima che lui indovini ilpersoneggio raffigurato sulla vostra.</string>

        
    <string name="title_paired_devices">Dispositivo associati</string>
    <string name="title_other_devices">Altri dispositivi</string>
    <string name="button_scan">Ricerca dispositivo</string>
    <string name="none_paired">Nessun dispositivo è stato associato</string>
    <string name="none_found">Nessun dispositivo trovato</string>
    <string name="scanning">Ricerca dispositivi</string>
    <string name="select_device">Seleziona un dispositivo per la connesssione</string>
    <string name="option_find_user">Cerca avversario</string>
    <string name="option_make_discoverable">Rendi visibile</string>
    <string name="connecting">Connessione ...</string>
    <string name="waiting">Attendi ...</string>
    <string name="title_bt_not_supported">Bluetooth non supportato</string>
    <string name="text_bt_not_supported">Bluetooth non supportato. Non è  possibile giocare con questo gioco senza il Bluetooth.</string>
    <string name="bt_not_enabled_leaving">Bluetooth necessario</string>
    <string name="goal_game_title_string">Scopo del gioco</string>
    <string name="goal_game_text_string">Scoprire chi &amp;eacute; il personaggio raffigurato sulla carta gialla del vostro avversario prima che lui indovini il personaggio raffigurato sulla vostra.</string>
    <string name="before_start_title_string">Prima di giocare</string>
    <string name="before_start_text_string">Prima di giocare per la prima volta, notate le differenze tra le facce sulle carte: nasi, cappelli, occhiali, capelli, barbe, baffl e molti altri dettagli sono tutti differenti in
ogni personaggio.</string>
    <string name="how_play_title_string">Come si gioca</string>
    <string name="how_play_text_string1">Iniziate la partita cliccando sul tasto &amp;ldquo;Nuova Partita&amp;rdquo; e avviate la connessione Bluethoot con il dispositivo avversario. &amp;Eacute; disponibile la ricerca dei dispositivi, oppure l&amp;#180;attivazione della visibilit&amp;agrave; del dispositivo stesso.</string>
    <string name="how_play_text_string2">Una volta stabilita la connessione ad ogni giocatore viene richiesto di scegliere in modo random un personaggio tra quelli disponibili nel gioco. Il personaggio che viene visualizzato &amp;egrave; quello che l&amp;#180;avversario deve indovinare per potersi considerare il vincitore. </string>
    <string name="how_play_text_string3">Successivamente viene visualizzato il tabellone di gioco. A turno i giocatori compongono una domanda e la inviano all&amp;#180;avversario. Alle domande &amp;egrave; consentito rispondere solamente con &amp;ldquo;si&amp;rdquo; o &amp;ldquo;no&amp;rdquo;. </string><string name="how_play_text_string4">Per esempio, chiedete all&amp;#180;avversario &amp;ldquo;il tuo personaggio porta il cappello?&amp;rdquo;, se risponde di &amp;ldquo;no&amp;rdquo;, potete eliminare tutte le persone con un cappello dal vostro tavolo di gioco selezionando i personaggi ed escludendoli con l&amp;#180;apposito tasto, mentre se risponde di &amp;ldquo;si&amp;rdquo; lasciate inalterato il tavolo.</string><string name="how_play_text_string5">Fate le domande a turno. Durante il gioco bisogna osservare le seguenti regole:</string><string name="how_play_text_string6">1- Se pensate di conoscere il personaggio del vostro avversario, potete provare ad indovinare, ma dovrete farlo prima di porgli la domanda, perch&amp;egrave; il provare ad indovinare rappresenta un turno completo. State attenti! Se non indovinate perdete la partita!</string><string name="how_play_text_string7">2- Il gioco continua fino a che un giocatore indovina chi &amp;egrave; il personaggio dell&amp;#180;avversario, o fino a quando uno dei 2 sbaglia ad indovinare.</string><string name="winner_title_string">Vincitore</string>
    <string name="winner_text_string">Il vincitore &amp;egrave; colui che indovina per primo il nome del personaggio dell&amp;#180;avversario.</string>
    <string name="choose_question_category">Scegli la categoria di domanda...</string>
    
    <string name="string_choose_question">Scegli la domanda ...</string>
    <string name="string_make_question">Poni Domanda ! ! !</string>
    
    <string name="no_one_choosed">- - - - -</string>
    <string name="category_sex">Sesso</string>
    <string name="question_string_sex">E</string>
    <string name="first_part_have">Ha</string>
    <string name="category_hairs">Capelli</string>
    <string name="question_string_hairs">i capelli</string>
    <string name="category_eyes">Occhi</string>
    <string name="question_string_eyes">gli occhi</string>
    <string name="category_moustache">Baffi</string>
    <string name="question_string_moustache">i baffi</string>
    <string name="category_beard">Barba</string>
    <string name="question_string_beard">la barba</string>
    <string name="category_particular_signs">Segni particolari</string>
    <string name="question_string_particular_signs">Ha</string>
    <string name="category_accessories">Accessori</string>
    <string name="question_string_accessories">Porta</string>
    
    <string name="yes_no_question">Si / No</string>
    
    <string name="sex_male">Maschio</string>
    <string name="question_string_male">un maschio</string>
    <string name="sex_female">Femmina</string>
    <string name="question_string_female">una femmina</string>
    
    <string name="accessories_hat">Cappello</string>
    <string name="question_string_hat">il cappello</string>
    <string name="accessories_glasses">Occhiali</string>
    <string name="question_string_glasses">gli occhiali</string>
    <string name="accessories_earring">Orecchini</string>
    <string name="question_string_earring">gli orecchini</string>
    <string name="accessories_flakes">Fiocchi capelli</string>
    <string name="question_string_flakes">i fiocchi sui capelli</string>
    
    <string name="hairs_short">Corti</string>
    <string name="hairs_long">Lunghi</string>
    
    <string name="red_cheecks">Gance rosse</string>
    <string name="question_string_red_cheecks">le guance rosse</string>
    <string name="big_mouth">Bocca grande</string>
    <string name="question_string_big_mouth">la bocca grande</string>
    <string name="thick_brow">Sopraciglia folte</string>
    <string name="question_string_thick_brow">le sopraciglia folte</string>
    
    <string name="color_orange_singular">Arancione</string>
    <string name="color_orange_plural">Arancioni</string>
    
    <string name="color_yellow_singular">Giallo</string>
    <string name="color_yellow_plural">Gialli</string>
    <string name="color_yellow_female">Gialla</string>
    
    <string name="color_white_singular">Bianco</string>
    <string name="color_white_plural">Bianchi</string>
    <string name="color_white_female">Bianca</string>
    
    <string name="color_brown_singular">Marrone</string>
    <string name="color_brown_plural">Marroni</string>
    
    <string name="color_black_singular">Nero</string>
    <string name="color_black_plural">Neri</string>
    <string name="color_black_female">Nera</string>
    
    
    
    
    
    
    

</resources>