<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/choose_question_category" />
    <Spinner 
        android:id="@+id/spinner_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView 
        android:id="@+id/txt_choose_question"
        android:text="@string/string_choose_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
 	<Spinner 
 	    android:id="@+id/spinner_choose_question"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:visibility="invisible"/>
 	<LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    android:layout_gravity="center"
 	    android:gravity="center">
 	    
 	    <Button 
	 	    android:id="@+id/btn_make_question"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:text="@string/string_make_question"
	 	    android:visibility="invisible" />
 	</LinearLayout>

</LinearLayout>